# mcp-separate-client-server

./: aiao_client.py  main.py  pyproject.toml  requirements.txt
server/: mathserver.py  server.py  web_search.py
